--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@ body {
   padding: 40px;
   background-color: #fff;
   position: relative;
+ 
 
   .result {
     text-align: center;
@@ -106,5 +107,11 @@ body {
         border: 2px solid rgba(0, 0, 0, 0.3);
       }
     }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .App {
+    max-width: 250px;
   }
 }
